--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Evolution Development</title>
 	<!-- Include CSS and JavaScript resources -->
-	<link href="./assets/css/style.css?8" rel="stylesheet">
+	<link href="./assets/css/style.css?9" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/7f455ee949.js" crossorigin="anonymous"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -38,9 +38,8 @@
     style="border-bottom: solid 1px white;">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/d/df/IPhone_icon_aqua.png" alt="EvoDev"
-                width="30" height="30">
-            LOGO
+            <img src="./assets/img/EvoLogo.png" alt="EvoDev"
+                width="260" height="70">
         </a>
         <!-- Navbar Toggler -->
         <button class="navbar-toggler " type="button" data-bs-toggle="collapse"
